fixed image cropping for low/high resolution images, also cleaned up connection/playerdata logic, correctly associates updated names for images

--- a/react-jeopardy/src/podium.css
+++ b/react-jeopardy/src/podium.css
@@ -40,7 +40,8 @@
 .podium-media-content img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  object-position: center;
 }
 
 .podium-media-content .placeholder-icon {
